# cobject

./: .gitignore  Makefile.am  README.md  cexception.c  cexception.h  class_generator.py  class_parser.py  cobject-model.xml  cobject.c  cobject.h  cobject.pc.in  cobject_make.mk  cobject_model.py  configure.ac  ctemplate.h  makefile  object.py  setup.py  xmac.h
cobject/: cobject.c  cobject.h  ctemplate.h  makefile  xmac.h
cobject_model/: api_generator.py  class_constructor_data.py  class_data.py  class_data_parser.py  class_member_data.py  class_method_data.py  impl_generator.py  method_param_data.py
ctemplate/: ctemplate.h  makefile  xmac.h
src/: cexception.c  cexception.h  cobject.c  cobject.h
tools/: __main__.py  class_data.py  class_generator.py  class_parser.py  cobject_make.mk
tst/: cexception-test.cc  circle-internal.h  circle.c  circle.h  cobject-model.xml  cobject-test.cc  container-circle.c  container-circle.h  container-int-template.h  container-internal.h  container-template.h  container.c  container.h  ctemplate-test.cc  makefile  rectangle-internal.h  rectangle.c  rectangle.h  shape-internal.h  shape.c  shape.h  unit-test
